--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .idea/**/tasks.xml
 .idea/dictionaries
 .idea/vcs.xml
+.idea/modules.xml
+.idea/resume.iml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
